# AIAppilcationStacks

./: .gitignore  DEMO.md  MAC-LINUX.md  README.md  package-lock.json
app/server/: .env.example  README.md  __main__.py  mock_executors.py  pyproject.toml
app/server/chat_app/: llm_executor.py  main_llm.py  nl2sql_agent.py  rag_tool.py
app/server/core/: base_agent.py  common_struct.py  external_logging.py  gen_ai_provider.py  langfuse_tracing.py  setup_rag.py  traditional_data_provider.py
app/server/core/chat_app/prompts/: prompts.py
app/server/core/dynamic_app/: a2a_config_provider.py  dynamic_struct.py  schema_utils.py
app/server/core/dynamic_app/prompts/: backend_orchestrator.py  graph_agent.py  sql_agent.py  ui_assembly.py  ui_orchestrator.py
app/server/core/dynamic_app/schemas/native_examples/: button.py  card.py  catalog.py  column.py  icon.py  image.py  row.py  text.py
app/server/core/dynamic_app/schemas/widget_schemas/: a2ui_custom_catalog_list.py  bar_graph.py  kpi.py  line_graph.py  map.py  table.py  timeline.py
app/server/database/: connections.py
app/server/dynamic_app/: dynamic_agents_graph.py  dynamic_graph_executor.py  old_executor.py
app/server/dynamic_app/back_agents_graph/: backend_orchestrator_agent.py  nl2graph_agent.py  rag_agent.py
app/server/dynamic_app/ui_agents_graph/: failed_assembly_agent.py  ui_assembly_agent.py  ui_orchestrator_agent.py  widget_tools.py
app/server/tests/: test_suggested_questions.py
app/server/traditional_app/: data_provider.py
docs/: README.md  agents.xlsx  mermaid.md  ~$agents.xlsx
(+50 files in other folders)
